--- a/blockInline.html
+++ b/blockInline.html
@@ -36,6 +36,7 @@
     <script>
         function hello() {
             document.getElementById("hello").innerText = "Hello"
+            document.createElement = "button"
         }
     </script>
 </body>
